# AimAssist

./: .gitignore  README.md  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/aimassist/app/: App.kt  MainActivity.kt  SettingsActivity.kt
app/src/main/java/com/aimassist/app/data/: DetectionResult.kt
app/src/main/java/com/aimassist/app/ncnn/: NcnnDetector.kt
app/src/main/java/com/aimassist/app/service/: AutoClickService.kt  DetectionService.kt
app/src/main/java/com/aimassist/app/utils/: SettingsManager.kt
app/src/main/jni/: CMakeLists.txt  aimassist_jni.cpp  ncnn_detector.cpp  ncnn_detector.h  uinput_injector.cpp  uinput_injector.h  yolov8.cpp  yolov8.h  zero_copy_pipeline.cpp  zero_copy_pipeline.h
app/src/main/res/drawable/: circle_status_active.xml  circle_status_inactive.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_play.xml  ic_settings.xml  ic_stop.xml  ic_target.xml
app/src/main/res/layout/: activity_main.xml  activity_settings.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
